--- a/package.json
+++ b/package.json
@@ -4,20 +4,31 @@
   "description": "Use Google PageSpeed API to report on a site's mobile goodness.",
   "main": "index.coffee",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/xurizaemon/hubot-mobilefriendly.git"
+    "url": "git://github.com/hubot-scripts/hubot-mobilefriendly.git"
   },
-  "keywords": [
-    "hubot",
-    "pagespeed"
-  ],
-  "author": "John Hobbs <john@velvetcache.org>",
-  "license": "unknown",
+  "keywords": ["hubot","hubot-scripts","pagespeed","mobilefriendly"],
+  "author": "Chris Burgess <chris@giantrobot.co.nz>",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/xurizaemon/hubot-mobilefriendly/issues"
   },
-  "homepage": "https://github.com/xurizaemon/hubot-mobilefriendly#readme"
+  "homepage": "https://github.com/xurizaemon/hubot-mobilefriendly#readme",
+  "dependencies": {
+    "coffee-script": "~1.6"
+  },
+  "devDependencies": {
+    "chai": "*",
+    "grunt": "^1.0.1",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-mocha-test": "~0.7.0",
+    "grunt-release": "~0.6.0",
+    "matchdep": "~0.1.2",
+    "mocha": "*",
+    "sinon": "*",
+    "sinon-chai": "*"
+  }
 }
